Make search UI and list item for search recycler view

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    // CardView
+    implementation "androidx.cardview:cardview:$cardview_version"
+
+    // RecyclerView
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
+
+    // TextInputLayout
+    implementation "com.google.android.material:material:$material_version"
+
 }
