--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
+
+    ext {
+        kotlin_version = "1.3.72"
+        cardview_version = "1.0.0"
+        recyclerview_version = "1.1.0"
+        material_version = "1.3.0-alpha02"
+    }
     repositories {
         google()
         jcenter()
