Add Model classes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,12 @@ dependencies {
     // TextInputLayout
     implementation "com.google.android.material:material:$material_version"
 
+    // Moshi
+    implementation "com.squareup.moshi:moshi:$version_moshi"
+    implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
+
+    // Retrofit with Moshi Converter
+    implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
+    implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
+
 }
