--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
         cardview_version = "1.0.0"
         recyclerview_version = "1.1.0"
         material_version = "1.3.0-alpha02"
+        version_moshi = "1.9.2"
+        version_retrofit = "2.9.0"
     }
     repositories {
         google()
