--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,10 @@ buildscript {
         material_version = "1.3.0-alpha02"
         version_moshi = "1.9.2"
         version_retrofit = "2.9.0"
+        version_lifecycle = '2.2.0'
+        version_core = "1.0.1"
+        version_nav = '2.3.0'
+        version_glide = '4.11.0'
     }
     repositories {
         google()
